@@ -429,7 +429,7 @@ monitor.
 DejaGnu uses the same output procedures to produce these messages
 for all testsuites and these procedures are already known to conform
 to POSIX 1003.3.  For a DejaGnu testsuite to conform to POSIX 1003.3,
-you must avoid the @emph{setup}xfail@} procedure as
+you must avoid the @emph{setup_xfail} procedure as
 described in the @emph{PASS} section above and you must
 be careful to return @emph{UNRESOLVED} where appropriate,
 as described in the @emph{UNRESOLVED} section
@@ -1427,7 +1427,7 @@ anything is actually configured unless --build is also specified; it
 affects @emph{only} DejaGnu procedures that compare the
 host string with particular values.  The procedures
 @emph{ishost}, @emph{istarget},
-@emph{isnative}, and @emph{setup}xfail@}
+@emph{isnative}, and @emph{setup_xfail}
 are affected by @code{--host}. In this usage,
 @emph{host} refers to the machine that the tests are to
 be run on, which may not be the same as the
@@ -1455,7 +1455,7 @@ debugging output. Debugging output is displayed as part of the
 @file{dbg.log}. The extra debugging output does
 @emph{not} appear on standard output, unless the
 verbose level is greater than 2 (for instance, to see debug output
-immediately, specify @code{--debug}-v -v@}). The
+immediately, specify @code{--debug -v -v}). The
 debugging output shows all attempts at matching the test output of
 the tool with the scripted patterns describing expected output.  The
 output generated with @code{--strace} also goes into
@@ -1479,10 +1479,9 @@ code.  You can normally prepare any auxiliary files needed with
 
 @item @code{--outdir [path]}
 Write output logs in directory
-@file{path}.  The default is @emph{.@},
-the} directory where you start
-@emph{runtest}. This option affects only the summary
-and the detailed log files
+@file{path}.  The default is @emph{.},
+the directory where you start @emph{runtest}. This
+option affects only the summary and the detailed log files
 @file{tool.sum} and
 @file{tool.log}. The DejaGnu debug
 log @file{dbg.log} always appears (when requested) in
@@ -1507,7 +1506,7 @@ Use @file{path} as the top directory
 for test scripts to run. @emph{runtest} looks in this
 directory for any subdirectory whose name begins with the toolname
 (specified with @code{--tool}). For instance, with
-@code{--tool}gdb@}, @emph{runtest} uses
+@code{--tool gdb}, @emph{runtest} uses
 tests in subdirectories @file{gdb.*} (with the usual
 shell-like filename expansion).  If you do not use
 @code{--srcdir}, @emph{runtest} looks for
@@ -1581,7 +1580,7 @@ tool.
 @item @code{--verbose} (-v)
 Turns on more output. Repeating this option increases
 the amount of output displayed. Level one (@emph{-v})
-is simply test output. Level two (@emph{-v}-v@}) shows
+is simply test output. Level two (@emph{-v -v}) shows
 messages on options, configuration, and process control.  Verbose
 messages appear in the detailed (@file{*.log}) log
 file, but not in the summary (@file{*.sum}) log
@@ -2765,7 +2764,7 @@ DejaGnu itself to remain target independent.
 
 Usually the best way to write a new initialization module is to
 edit an existing initialization module; some trial and error will be
-required. If necessary, you can use the @@samp@{--debug@} option to see what
+required. If necessary, you can use the @code{--debug} option to see what
 is really going on.
 
 When you code an initialization module, be generous in printing
@@ -3263,7 +3262,7 @@ but they should never be changed.
 
 @item $prms_id
 The tracking system (e.g. GNATS) number identifying
-a corresponding bugreport.  (@emph{0}@} if you do not
+a corresponding bugreport.  (@emph{0} if you do not
 specify it in the test script.)
 
 @item $item bug_id
@@ -3389,10 +3388,10 @@ You may also want to use the @code{configure} option
 supporting code installed.  By default, installation is in subdirectories
 of @file{/usr/local}, but you can select any alternate
 directory @code{altdir} by including
-@code{--prefix}@{altdir@}@} on the
+@code{--prefix altdir} on the
 @code{configure} command line. (This value is captured in
 the Makefile variables @emph{prefix} and
-@emph{exec}prefix@}.)
+@emph{exec_prefix}.)
 
 Save for a small number of example tests, the DejaGnu distribution
 itself does not include any testsuites; these are available
@@ -6176,7 +6175,7 @@ procedures, @code{$@{tool@}_exit} and
 arguments.
 
 The other two procedures, @code{$@{tool@}_start}
-and @code{$@{tool@}_load}@}, are only called by the test
+and @code{$@{tool@}_load}, are only called by the test
 suites themselves (or by testsuite-specific initialization
 code); they may take arguments  or not, depending on the
 conventions used within each testsuite.
