@@ -1,5 +1,13 @@
 2015-05-15  Filipe Brandenburger  <filbranden@google.com>
 
+	* doc/dejagnu.xml: Fix typos such as stray }'s and @samp{...},
+	possibly introduced in a conversion of .texi to SGML Docbook.
+	* doc/user.xml: Likewise.
+	* doc/ref.xml: Likewise.
+	* doc/dejagnu.texi: Regenerate.
+
+2015-05-15  Filipe Brandenburger  <filbranden@google.com>
+
 	* runtest.exp (runtest): Introduce new --log_dialog option.
 	* doc/runtest.1: Document it.
 	* doc/user.xml: Likewise.
